--- a/docs/memoria-TFG/prefacios/prefacio.tex
+++ b/docs/memoria-TFG/prefacios/prefacio.tex
@@ -18,9 +18,7 @@ La arquitectura del sistema consta de un navegador web, un servidor web Node.js,
 
 La integración entre los distintos componentes del sistemas está realizada de dos maneras. La primera es una REST API y el intercambio de mensajería JSON para realizar operaciones de tipo CRUD para las distintas configuraciones del simulador y la segunda es un sistema bidireccional dirigido por eventos utilizado durante las simulaciones para compartir información entre los distintos componentes del sistema sin que estos la hayan solicitado evitando mucha peticiones innecesarias y consiguiendo que las simulaciones funcionen en tiempo real.
 
-Para la gestión del proyecto se ha elegido el modelo en espiral como modelo de trabajo. Esto me ha permitido evaluar los requisitos en cada iteración y reorientar el proyecto al encontrar dificultados y limitaciones respecto a la idea principal. Esta idea consistía en desarrollar un videojuego de aventuras con Unity 5 pero a medida que se planteaba y desarrollaba el videojuego se ha detectado que el motor gráfico tiene ciertas limitaciones. Esto incrementaba considerablemente la dificultad y el tiempo del desarrollo. 
-
-Por esto como resultado final se ha desarrollado un simulador de escenarios con usuarios móviles ya que lo importante en este caso es la evaluación de algoritmos de recomendaciones.
+Para la gestión del proyecto se ha elegido el modelo en espiral como modelo de trabajo. Esto me ha permitido evaluar los requisitos en cada iteración y reorientar el proyecto al encontrar dificultados y limitaciones.
 
 \cleardoublepage
 
