--- a/docs/memoria-TFG/capitulos/03_GestionProyecto.tex
+++ b/docs/memoria-TFG/capitulos/03_GestionProyecto.tex
@@ -1,7 +1,7 @@
 \chapter{Gestión del proyecto}
 
 
-En este capítulo se explican el modelo de proceso seleccionado y las distintas etapas por las que ha pasado el este Trabajo Fin de Grado centradose únicamente en los aspectos más importantes. Para profundizar más sobre estos aspectos debe acudir a los anexos.
+En este capítulo se explican el modelo de proceso seleccionado y las distintas etapas por las que ha pasado el este Trabajo Fin de Grado centradose únicamente en los aspectos más importantes.
 
 \section{Modelo de proceso seleccionado}
 
@@ -12,7 +12,7 @@ Por esto se ha planteado usar el motor gráfico Unity 5 para el desarrollo del v
 
 Para solucionar estos problemas se ha tomado la decisión de elegir el modelo en espiral como modelo de trabajo. Las actividades de este modelo forman una espiral de tal forma que cada iteración representa un conjunto de actividades. Esto nos permitiría segmentar el trabajo en tareas más pequeñas e ir definiendo los requisitos mientras se desarrollaba el videojuego. De esta manera podríamos evaluar si los requisitos propuestos podrían o no ser implementados con Unity 5. En caso de que el motor gráfico tuviese algún límite tendríamos la capacidad de reorientar el proyecto.
 
-\subsection{Etapa 1}
+\subsection{Primer ciclo de la espiral}
 
 En la tabla \ref{tabla:requisitosEtapa1} podemos encontrar las tareas que han sido definidas para esta etapa:
 
@@ -33,7 +33,7 @@ RQ-7  & Investigar si los edificio generados con CityEngine 2014 son reales o no
 RQ-8  & Permitir que el juego se realice sobre mapas de ciudades reales \\ \hline
 RQ-9  & Investigar si es posible el desarrollo de videojuego en 3D \\ \hline
 \end{tabular}
-\caption{Tareas etapa 1}
+\caption{Tareas del primer ciclo de la espiral}
 \label{tabla:requisitosEtapa1}
 \end{center}
 \end{table}
@@ -49,7 +49,7 @@ Como conclusión de esta etapa obtenemos el siguiente resultado:
 	\item se ha decido de dejar atrás el modelado 3D ya que se han detectado los siguientes problemas: coste en cuanto a tiempo demasiado grande para el diseño de una ciudad, CityEngine 2014 no interpreta correctamente los datos exportados además no existe ninguna otra herramienta que nos permita la correcta interpretación de los datos (por lo menos yo no podido encontrarla).
 \end{itemize}
 
-\subsection{Etapa 2}
+\subsection{Segundo ciclo de la espiral}
 
 En la tabla \ref{tabla:requisitosEtapa2} podemos encontrar las tareas que han sido definidas para esta etapa:
 
@@ -62,7 +62,7 @@ Código & Descripción \\
 RQ-10 & Investigar como se desarrollan grafos en Unity para la posterior implementación de la IA sobre estos para el movimiento de los vehículos etc. \\ \hline
 RQ-11 & Diseñar y desarrollar un mapa del juego\\ \hline
 \end{tabular}
-\caption{Tareas etapa 2}
+\caption{Tareas segundo ciclo de la espiral}
 \label{tabla:requisitosEtapa2}
 \end{center}
 \end{table}
@@ -75,7 +75,7 @@ Como conclusión de esta etapa obtenemos el siguiente resultado:
 
 \newpage
 
-\subsection{Etapa 3}
+\subsection{Tercer ciclo de la espiral}
 
 En la tabla \ref{tabla:requisitosEtapa3} podemos encontrar las tareas que han sido definidas para esta etapa:
 
@@ -88,7 +88,7 @@ Código & Descripción \\
 RQ-11 & Investigar en que consiste el formato OSM\\ \hline
 RQ-12 & Investigar si es posible la integración de OpenStreetMap con Unity\\ \hline
 \end{tabular}
-\caption{Tareas etapa 3}
+\caption{Tareas tercer ciclo de la espiral}
 \label{tabla:requisitosEtapa3}
 \end{center}
 \end{table}
@@ -99,7 +99,7 @@ Como conclusión de esta etapa obtenemos el siguiente resultado:
 	\item en esta etapa se ha decido reorientar el proyecto por las siguientes razones: Unity 5 no puede ser integrado con OpenStreetMap por lo tanto la única opción para desarrollar un videojuego sobre mapas reales es desarrollando el videojuego desde cero con algún lenguaje como Java y el inconveniente que esto representa es que es demasiado costoso en cuanto a tiempo y dificultad.  
 \end{itemize}
 
-\subsection{Etapa 4}
+\subsection{Cuarto ciclo de la espiral}
 
 En la tabla \ref{tabla:requisitosEtapa4} podemos encontrar las tareas que han sido definidas para esta etapa:
 
@@ -118,7 +118,7 @@ RQ-17 & Instalar y configurar Angular.js\\ \hline
 RQ-18 & Instalar y configurar OpenLayers.js\\ \hline
 RQ-19 & Instalar y configurar Bootstrap\\ \hline
 \end{tabular}
-\caption{Tareas etapa 4}
+\caption{Tareas cuarto ciclo de la espiral}
 \label{tabla:requisitosEtapa4}
 \end{center}
 \end{table}
@@ -130,7 +130,7 @@ Como conclusión de esta etapa obtenemos el siguiente resultado:
 	\item se han instalado y configurado todas las herramientas y frameworks necesarios para el desarrollo de la aplicación.
 \end{itemize}
 
-\subsection{Etapa 5}
+\subsection{Quinto ciclo de la espiral}
 
 En la tabla \ref{tabla:requisitosEtapa5} podemos encontrar las tareas que han sido definidas para esta etapa:
 
@@ -147,7 +147,7 @@ RQ-23 & Diseñar y desarrollar el back-end\\ \hline
 RQ-24 & Diseñar y desarrollar el recomendador\\ \hline
 RQ-25 & Realizar pruebas funcionales de la aplicación\\ \hline
 \end{tabular}
-\caption{Tareas etapa 5}
+\caption{Tareas quinto ciclo de la espiral}
 \label{tabla:requisitosEtapa5}
 \end{center}
 \end{table}
@@ -159,7 +159,7 @@ Como conclusión de esta etapa obtenemos el siguiente resultado:
 \end{itemize}
 
 
-\subsection{Etapa 6}
+\subsection{Sexto ciclo de la espiral}
 
 La última etapa consiste en documentar el trabajo realizado en este Trabajo Fin de Grado.
 
