--- a/docs/memoria-TFG/memoria-TFG-Slavcho-Ivanov.tex
+++ b/docs/memoria-TFG/memoria-TFG-Slavcho-Ivanov.tex
@@ -12,9 +12,6 @@
 \usepackage[utf8]{inputenc}
 \usepackage[spanish]{babel}
 \usepackage[sort&compress]{natbib}
-% \usepackage[style=list, number=none]{glossary} %
-%\usepackage{titlesec}
-%\usepackage{pailatino}
 
 \decimalpoint
 \usepackage{dcolumn}
@@ -197,11 +194,11 @@ pdfproducer = {pdflatex}
 \appendixpage
 
 \input{anexos/01_Manual_Usuario}
-\input{anexos/02_Trabajo_Desarrollado}
-\input{anexos/03_Implementacion_Front_End}
-\input{anexos/04_Implementacion_Back_End}
-\input{anexos/05_Pruebas_stress}
-\input{anexos/06_Integracion_Recomendador}
+\input{anexos/02_Analisis}
+\input{anexos/03_Diseno}
+\input{anexos/04_Implementacion}
+\input{anexos/04_Pruebas_Estres}
+\input{anexos/05_Integracion_Recomendador}
 
 \chapter*{}
 \thispagestyle{empty}
