--- a/docs/memoria-TFG/prefacios/prefacio.tex
+++ b/docs/memoria-TFG/prefacios/prefacio.tex
@@ -12,7 +12,9 @@
 
 Los sistemas de recomendación proporcionan sugerencias acerca de elementos que pueden resultar de interés para el usuario como pueden ser los hoteles, restaurantes, libros, películas, lineas de taxis y autobuses etc. Habitualmente estos sistemas se evalúan con conjuntos de datos estáticos clásicos pero el inconveniente que esto conlleva es que solo podemos realizar un análisis sobre el comportamiento de los usuarios en el pasado perdiendo la capacidad de poder calibrar correctamente los algoritmos de recomendaciones para su correcta evaluación.
 
-El objetivo de este Trabajo Fin de Grado es desarrollar un simulador de escenarios con usuarios móviles que recolecte y proporciones conjuntos de datos dinámicos para la evaluación de algoritmos de recomendaciones. El sistema funciona en tiempo real y utiliza técnicas de crowdsourcing, también conocido como colaboración abierta distribuida, y consiste en delegar tareas a un grupo de personas o comunidad a través de una convocatoria abierta.
+El objetivo de este Trabajo Fin de Grado es desarrollar un simulador de escenarios con usuarios móviles que recolecte y proporciones conjuntos de datos dinámicos para la evaluación de algoritmos de recomendaciones. 
+
+El sistema desarrollado utiliza técnicas de crowdsourcing, también conocido como colaboración abierta distribuida, y consiste en delegar tareas a un grupo de personas o comunidad a través de una convocatoria abierta.
 
 La arquitectura del sistema consta de un navegador web, un servidor web Node.js, un servidor de recomendaciones y una base de datos mongoDB. Se trata de una aplicación de una sola página desarrollada con Angular.js y Node.js que nos permite configurar distintos escenarios con conjuntos de datos reales obtenidos a partir del servicio de mapas de OpenStreetMap.
 
