--- a/docs/memoria-TFG/anexos/01_Manual_Usuario.tex
+++ b/docs/memoria-TFG/anexos/01_Manual_Usuario.tex
@@ -79,6 +79,25 @@ Las variables del fichero baseConfig.json tienen el siguiente significado:
 
 Dichas configuraciones son importantes ya que de esta forma tenemos la opción de llevarnos la base de datos en un servidor diferente para darle más potencia.
 
+\paragraph{Paso 4.2: Posibles problemas durante la ejecución del simulador}
+
+Se puede dar el caso que al intentar arrancar el simulador nos de el siguiente error:
+
+\begin{lstlisting}[language=xml, frame=single]
+Error: listen EACCES 0.0.0.0:81
+at Object.exports._errnoException (util.js:870:11)
+at exports._exceptionWithHostPort (util.js:893:20)
+at Server._listen2 (net.js:1218:19)
+at listen (net.js:1267:10)
+at Server.listen (net.js:1363:5)
+\end{lstlisting}
+
+El error EACCES ocurre cuando no tenemos suficientes privilegios sobre el puerto donde estamos lanzando el servidor Node.js. La solución depende del Sistema Operativo que estamos usando. En el caso de Windows tenemos que cambiar el puerto donde lanzamos el servidor siempre y cuando estemos usando un usuario que tenga suficientes privilegios. En el caso de Linux tenemos que lanzar el servidor con el comando sudo delante de la siguiente manera:
+
+\begin{lstlisting}[language=xml, frame=single]
+slavcho@ubuntu:~/Simulator/scripts$ sudo ./ejecutarSimulador.sh
+\end{lstlisting}
+
 \subsubsection{Paso 5: Instalación del recomendador}
 
 \paragraph{Paso 5.1: Instalar Apache maven}
@@ -138,12 +157,11 @@ Se trata de crear nuevas configuraciones para el recomendador y crear los tipos 
 Para configurar los parámetros del recomendador primero tenemos que estar autentificados con nuestros usuario. Una vez autentificados vamos en Settings $\rightarrow$ Recommender settings y vemos la siguiente pantalla:
 
 \begin{figure}[H]
-	\centering\includegraphics[scale=0.3]{imagenes/capitulo2/configuracion-recomendador.jpg}
+	\centering\includegraphics[scale=0.25]{imagenes/capitulo2/configuracion-recomendador.jpg}
 	\caption{Configuración del recomendador}
 	\label{img:ConfiguracionRecomendador}
 \end{figure}
 
-\newpage
 
 En este formulario tenemos que introducir los siguientes datos:
 \begin{itemize}
@@ -156,17 +174,17 @@ En este formulario tenemos que introducir los siguientes datos:
 	\item Minimum score for recommending an item: puntuación mínima para que un item sea recomendado
 \end{itemize}
 
+\newpage
+
 \section{Configuración de los objetos estáticos}\label{sec:confObjEstaticos}
 
 Para crear un nuevo tipo de objeto estático primero tenemos que estar autentificados con nuestros usuario. Una vez autentificados vamos en Settings $\rightarrow$ Static item type y vemos la siguiente pantalla:
 
 \begin{figure}[H]
-	\centering\includegraphics[scale=0.3]{imagenes/capitulo3/config-objetos-estaticos.jpg}
+	\centering\includegraphics[scale=0.25]{imagenes/capitulo3/config-objetos-estaticos.jpg}
 	\caption{Configuración de los objetos estáticos}
 	\label{img:ConfiguracionObjetosEstaticos}
 \end{figure}
-
-\newpage
 
 En este formulario tenemos que introducir los siguientes datos:
 
@@ -182,8 +200,8 @@ Por debajo del formulario de creación nuevos tipos de objetos estáticos aparec
 Para crear un nuevo tipo de objeto dinámicos primero tenemos que estar autentificados con nuestros usuario. Una vez autentificados vamos en Settings $\rightarrow$ Dynamic item type y vemos la siguiente pantalla:
 
 \begin{figure}[H]
-	\centering\includegraphics[scale=0.3]{imagenes/capitulo4/config-objetos-dinamicos.jpg}
-	\caption{Configuración del recomendador}
+	\centering\includegraphics[scale=0.25]{imagenes/capitulo4/config-objetos-dinamicos.jpg}
+	\caption{Configuración de los objetos dinámicos}
 	\label{img:ConfiguracionObjetosDinamicos}
 \end{figure}
 
@@ -201,7 +219,7 @@ Por debajo del formulario de creación nuevos tipos de objetos dinámicos aparec
 Para registrar un nuevo usuario lo que tenemos que hacer es pinchar en el enlace Register en la página lo login. Se nos muestra la siguiente pantalla:
 
 \begin{figure}[H]
-	\centering\includegraphics[scale=0.3]{imagenes/capitulo5/register.jpg}
+	\centering\includegraphics[scale=0.25]{imagenes/capitulo5/register.jpg}
 	\caption{Crear un nuevo usuario}
 	\label{img:AddUser}
 \end{figure}
@@ -213,7 +231,7 @@ En este formulario tenemos que añadir el nombre del usuario, su contraseña y s
 Para realizar cambios en el nombre del usuario, cambiar la imagen del perfil o cambiar la contraseña tenemos que ir en el menú Perfil:
 
 \begin{figure}[H]
-	\centering\includegraphics[scale=0.3]{imagenes/capitulo6/perfil-del-usuario.jpg}
+	\centering\includegraphics[scale=0.25]{imagenes/capitulo6/perfil-del-usuario.jpg}
 	\caption{Actualizar el perfil de un usuario}
 	\label{img:UpdateUser}
 \end{figure}
@@ -233,21 +251,19 @@ Al realizar cualquier cambio el el sistema nos informara si la acción ha salido
 La opción Maps $\rightarrow$ map search nos permite buscar mapas a los cuales queremos conectarnos para realizar alguna simulación:
 
 \begin{figure}[H]
-	\centering\includegraphics[scale=0.3]{imagenes/capitulo7/busqueda-de-mapas.jpg}
+	\centering\includegraphics[scale=0.25]{imagenes/capitulo7/busqueda-de-mapas.jpg}
 	\caption{Búsqueda de mapas}
 	\label{img:BuscarMapas}
 \end{figure}
 
 En la imagen vemos que disponemos de distintos tipos de filtros para la búsqueda de mapas. Estos filtros son: por nombre, por tipo, por estado, por ciudad, por fechas de creación o solo buscar solo mis mapas. Si no introducimos ningún filtro devolverá todos los mapas que están creados en el sistema.
 
-\newpage
-
 \section{Crear un nuevo mapa}\label{sec:crearMapa}
 
 Para crear un nuevo mapa vamos en Maps $\rightarrow$ new map y vemos el siguiente formulario:
 
 \begin{figure}[H]
-	\centering\includegraphics[scale=0.3]{imagenes/capitulo8/crear-un-nuevo-mapa.jpg}
+	\centering\includegraphics[scale=0.25]{imagenes/capitulo8/crear-un-nuevo-mapa.jpg}
 	\caption{Crear un nuevo mapa}
 	\label{img:AddMapa}
 \end{figure}
@@ -267,7 +283,7 @@ Una vez que hayamos rellenado el formulario pulsamos en el botón Save y el sist
 Una vez que hayamos creado el mapa podemos empezar a crear las escenas. La creación de escenas se realiza en 4 pasos. En el primero de los pasos tenemos que introducir el nombre de la escenas y el elegir el tipo de recomendador que queremos usar para dicha escena:
 
 \begin{figure}[H]
-	\centering\includegraphics[scale=0.3]{imagenes/capitulo9/crear-escena-1.jpg}
+	\centering\includegraphics[scale=0.25]{imagenes/capitulo9/crear-escena-1.jpg}
 	\caption{Crear una nueva scena}
 	\label{img:AddScena1}
 \end{figure}
@@ -275,7 +291,7 @@ Una vez que hayamos creado el mapa podemos empezar a crear las escenas. La creac
 En el segundo paso tenemos que elegir en que cuidad se va a realizar la simulación y definir los limites de la escena:
 
 \begin{figure}[H]
-	\centering\includegraphics[scale=0.3]{imagenes/capitulo9/crear-escena-2.jpg}
+	\centering\includegraphics[scale=0.25]{imagenes/capitulo9/crear-escena-2.jpg}
 	\caption{Crear una nueva scena}
 	\label{img:AddScena2}
 \end{figure}
@@ -287,7 +303,7 @@ Para definir la esquina inferior derecha seleccionamos la opción select lower r
 En el tercer paso tenemos que definir los objetos estáticos de la escena:
 
 \begin{figure}[H]
-	\centering\includegraphics[scale=0.3]{imagenes/capitulo9/crear-escena-3-1.jpg}
+	\centering\includegraphics[scale=0.25]{imagenes/capitulo9/crear-escena-3-1.jpg}
 	\caption{Crear una nueva scena}
 	\label{img:AddScena31}
 \end{figure}
@@ -297,7 +313,7 @@ Hay dos maneras para definir objetos estáticos: manualmente y importándolos de
 Por debajo del mapa podemos ver una lista con todos los objetos estáticos de la escena y una opción que nos permite borrar los objetos que no necesitamos:
 
 \begin{figure}[H]
-	\centering\includegraphics[scale=0.3]{imagenes/capitulo9/crear-escena-3-2.jpg}
+	\centering\includegraphics[scale=0.25]{imagenes/capitulo9/crear-escena-3-2.jpg}
 	\caption{Crear una nueva scena}
 	\label{img:AddScena32}
 \end{figure}
@@ -305,7 +321,7 @@ Por debajo del mapa podemos ver una lista con todos los objetos estáticos de la
 En el cuarto y último paso tenemos que definir cuales son los objetos dinámicos y sus rutas:
 
 \begin{figure}[H]
-	\centering\includegraphics[scale=0.3]{imagenes/capitulo9/crear-escena-4.jpg}
+	\centering\includegraphics[scale=0.25]{imagenes/capitulo9/crear-escena-4.jpg}
 	\caption{Crear una nueva scena}
 	\label{img:AddScena4}
 \end{figure}
@@ -313,7 +329,7 @@ En el cuarto y último paso tenemos que definir cuales son los objetos dinámico
 Igual que los objetos estáticos también tenemos dos formas de definir los objetos dinámicos: manual e importando un fichero. La forma manual consiste en elegir que tipo de objeto dinámico queremos introducir, su nombre, velocidad y ruta. Para introducir la ruta es suficiente con ir seleccionando sobre el mapa los nodos de movimiento del objeto. Al final pulsamos sobre el botón Save item para confirmar que queremos que este objeto forme parte de la escena. Una vez confirmado esto por debajo del mapa vemos una lista con todos los objetos dinámicos introducidos hasta el momento y podemos borrar alguno de ellos si es necesario:
 
 \begin{figure}[H]
-	\centering\includegraphics[scale=0.2]{imagenes/capitulo9/crear-escena-4-1.jpg}
+	\centering\includegraphics[scale=0.25]{imagenes/capitulo9/crear-escena-4-1.jpg}
 	\caption{Crear una nueva scena}
 	\label{img:AddScena41}
 \end{figure}
@@ -325,21 +341,19 @@ Una vez introducidos todos los datos pulsamos el botón Save para crear la escen
 Para modificar un mapa o escena primero tenemos que realizar una busque de mapas en Maps $\rightarrow$ maps search y en la lista de resultados pulsamos sobre el icono de editar imagen. Solo podemos editar un mapa si la hayamos creado nosotros. De lo contrario el icono de editar imagen no aparecerá. Una vez que hayamos pulsado el icono de editar imagen entonces veremos la siguiente pantalla:
 
 \begin{figure}[H]
-	\centering\includegraphics[scale=0.3]{imagenes/capitulo10/capitulo10.jpg}
+	\centering\includegraphics[scale=0.25]{imagenes/capitulo10/capitulo10.jpg}
 	\caption{Edición de mapas y escenas}
 	\label{img:UpdateMapScene}
 \end{figure}
 
 En esta pantalla disponemos de distintos tipos de opciones entre los cuales modificar datos del mapa, crear o modificar escenas.
 
-\newpage
-
 \section{Simulación}
 
 Para ejecutar una simulación lo primero que tenemos que hacer es realizar la búsqueda de un mapa explicado en el capítulo \ref{sec:BuscarMapas}. Una vez que hayamos realizado la búsqueda pulsamos el botón "Play" y a continuación se nos muestra una pantalla en la cual tenemos que elegir la escena a la cual queremos conectarnos.
 
 \begin{figure}[H]
-	\centering\includegraphics[scale=0.3]{imagenes/capitulo11/capitulo11.jpg}
+	\centering\includegraphics[scale=0.25]{imagenes/capitulo11/capitulo11.jpg}
 	\caption{Simulación}
 	\label{img:Simulation}
 \end{figure}
