--- a/docs/memoria-TFG/capitulos/04_Conclusiones.tex
+++ b/docs/memoria-TFG/capitulos/04_Conclusiones.tex
@@ -16,9 +16,11 @@ Como se puede comprobar a continuación, se han cumplido todos los objetivos mar
 
 \section{Rendimientos del simulador}
 
-El limite teórico máximo de peticiones de las aplicaciones desarrolladas con Node.js es igual al número máximo de sockets que se puedan crear en el servidor, es decir, un servidor con un Sistema Operativo Linux puede crear 65535 sockets. Pero hay que tener en cuenta que una parte esta reservada para el Sistema Operativo. Esto nos deja entre 30.000 - 45.000 sockets que podemos usar.
+El limite teórico máximo de peticiones de las aplicaciones desarrolladas con Node.js es igual al número máximo de sockets que se puedan crear en el servidor, es decir, un servidor con un Sistema Operativo Linux puede crear 65535 sockets. Pero hay que tener en cuenta que una parte esta reservada para el Sistema Operativo. Esto nos deja entre 30.000 - 45.000 sockets que podemos usar. Tenemos que comprobar como se comporta el simulador y por lo tanto hemos realizado unas prueba de estrés tanto con Linux como con Windows.
 
-Tenemos que comprobar como se comporta el simulador por lo tanto hemos realizado unas pruebas de stress. A continuación podemos ver los datos del servidor y los resultados obtenidos:
+\subsection{Rendimientos con Linux}
+
+En este apartado se describe los resultados de las pruebas de estrés realizadas con un Sistema Operativo Linux con las siguientes características:
 
 \begin{itemize}
 	\item Sistema Operativo: Linux v15.10 64 bits
@@ -34,7 +36,7 @@ Tenemos que comprobar como se comporta el simulador por lo tanto hemos realizado
 			100.000 & 30.2 & 133 MB & 1716,46 & 547,89 & 0,182517 \\ \hline
 			500.000 & 45.4 & 138MB & 1199,38 & 382,84 & 0,261204 \\ \hline
 		\end{tabular}
-		\caption{Pruebas de carga con 100 usuarios concurrentes}
+		\caption{Pruebas de estrés con 100 usuarios concurrentes}
 		\label{tabla:CienteUsuarios}
 	\end{center}
 \end{table}
@@ -47,7 +49,7 @@ Tenemos que comprobar como se comporta el simulador por lo tanto hemos realizado
 			100.000 & 40.6 & 160MB & 1286,86 & 410,78 & 1,2172 \\ \hline
 			500.000 & 44.6 & 162 MB & n/d & n/d & n/d \\ \hline
 		\end{tabular}
-		\caption{Pruebas de carga con 500 usuarios concurrentes}
+		\caption{Pruebas de estrés con 500 usuarios concurrentes}
 		\label{tabla:QuinientosUsuarios}
 	\end{center}
 \end{table}
@@ -60,7 +62,7 @@ Tenemos que comprobar como se comporta el simulador por lo tanto hemos realizado
 			100.000 & 26.3 & 167MB & n/d & n/d & n/d \\ \hline
 			500.000 & n/d & n/d & n/d & n/d & n/d \\ \hline
 		\end{tabular}
-		\caption{Pruebas de carga con 1000 usuarios concurrentes}
+		\caption{Pruebas de estrés con 1000 usuarios concurrentes}
 		\label{tabla:MilUsuarios}
 	\end{center}
 \end{table}
@@ -68,6 +70,62 @@ Tenemos que comprobar como se comporta el simulador por lo tanto hemos realizado
 En el caso de la pruebas con 500 usuarios concurrentes nos da dado el error apr socket recv Connection timed out (110) y se han completado 105.195 peticiones en la prueba con 500.000 peticiones. En el caso de la prueba con 1000 usuarios concurrentes nos ha dado el mismo fallo que en el caso de los 500 usuarios concurrentes y se han completado 54.599 peticiones en la prueba con 100.000 peticiones. 
 
 En el resto de casos las pruebas de carga han sido satisfactorias. Observamos que el peor de los casos se ha obtenido una media de 2,2 segundos por petición en el caso que tenemos 1000 usuarios concurrentes que han generado 50.000 peticiones.
+
+\subsection{Rendimientos con Windows}
+
+En este apartado se describe los resultados de las pruebas de estrés realizadas con un Sistema Operativo Windows con las siguientes características:
+
+\begin{itemize}
+	\item Sistema Operativo: Windows 10 Home 64 bits
+	\item RAM: 8 GB
+	\item CPU: Intel i3 1.8 GHz
+\end{itemize}
+
+\begin{lstlisting}[language=bash]
+slavcho@ubuntu:~/testing$ ab -g resultados4.csv -n 50000 -c 100 http://192.168.1.102:81/
+This is ApacheBench, Version 2.3 <$Revision: 1638069 $>
+Copyright 1996 Adam Twiss, Zeus Technology Ltd, http://www.zeustech.net/
+Licensed to The Apache Software Foundation, http://www.apache.org/
+
+Benchmarking 192.168.1.102 (be patient)
+Completed 5000 requests
+Completed 10000 requests
+Completed 15000 requests
+apr_socket_recv: Connection timed out (110)
+Total of 19219 requests completed
+slavcho@ubuntu:~/testing$
+\end{lstlisting}
+
+\newpage
+
+\begin{lstlisting}[language=bash]
+slavcho@ubuntu:~/testing$ ab -g resultados4.csv -n 50000 -c 500 http://192.168.1.102:81/
+This is ApacheBench, Version 2.3 <$Revision: 1638069 $>
+Copyright 1996 Adam Twiss, Zeus Technology Ltd, http://www.zeustech.net/
+Licensed to The Apache Software Foundation, http://www.apache.org/
+
+Benchmarking 192.168.1.102 (be patient)
+apr_socket_recv: Connection refused (111)
+Total of 558 requests completed
+\end{lstlisting}
+
+
+\begin{lstlisting}[language=bash]
+slavcho@ubuntu:~/testing$ ab -g resultados4.csv -n 100000 -c 500 http://192.168.1.102:81/
+This is ApacheBench, Version 2.3 <$Revision: 1638069 $>
+Copyright 1996 Adam Twiss, Zeus Technology Ltd, http://www.zeustech.net/
+Licensed to The Apache Software Foundation, http://www.apache.org/
+
+Benchmarking 192.168.1.102 (be patient)
+apr_socket_recv: Connection refused (111)
+Total of 524 requests completed
+\end{lstlisting}
+
+En las pruebas realizadas observamos que nos ha dado fallo en todas las pruebas. En el caso de la prueba con 100 usuarios concurrentes 50.000 peticiones se ha completado 19.219 de las peticiones. En el caso de la prueba con 500 usuarios concurrentes y 50.000 peticiones se han completado 558 peticiones. En el caso de la prueba con 500 usuarios concurrentes y 100.000 peticiones se han completado 524 peticiones. 
+
+\subsection{Conclusiones de las pruebas de estrés}
+
+Como conclusión podemos determinar que el Sistema Operativo Linux se comporta bastante mejor que el Windows para esta aplicación. Por lo tanto recomiendo la utilización de un servidor Linux para el simulador de escenarios para aprovechar mejor tanto la aplicación como el hardware.
 
 \section{Trabajos futuros}
 
@@ -88,4 +146,4 @@ El trabajo realizado ha sido muy satisfactorio ya que me ha aportado muchos cono
 
 Aún así durante el tiempo de desarrollo de todo el proyecto existían preguntas que he estado haciendome continuamente. ¿Si las tecnologías y decisiones que he tomado han sido las adecuadas? ¿Es fácil de implementar y sin perder tiempo? ¿Sería fácil de mantener el sistema en el futuro? ¿Las tecnologías elegidas tendrían algún limite que no permita o dificulte la implementación de ciertas funcionalidades en el futuro? 
 
-Como conclusión personal he obtenido que no existe la perfección y que nada es al cien por cien fiable. Siempre habrá cierta incertidumbre. Esto es un claro ejemplo de lo complicado que es desarrollar una buena aplicación. Lo que realmente importa es ser constante y comprometido con el trabajo que se está haciendo, tener los objetivos bien marcados de lo que queremos conseguir y aprender a ser autodidacta. 
+Como conclusión personal he obtenido que no existe la perfección y de lo complicado que es desarrollar una buena aplicación. Lo que realmente importa es ser constante y comprometido con el trabajo que se está haciendo y aprender a ser autodidacta.
