--- a/docs/memoria-TFG/anexos/02_Analisis.tex
+++ b/docs/memoria-TFG/anexos/02_Analisis.tex
@@ -82,6 +82,7 @@
 	RF-30 & La aplicación permitirá al usuario solicitar recomendaciones mientras se está ejecutando una simulación siempre y cuando el recomendador asociado a la escena es de tipo pull\\ \hline
 	RF-31 & El usuario recibirá recomendaciones sin haberlas solicitado siempre y cuando el recomendador asociado a la escena de es tipo push\\ \hline
 	RF-32 & El usuario puede arrancar/pausar una simulación\\ \hline
+	RF-33 & La aplicación permitirá al usuario generar de forma aleatoria los grafos de movimiento de los vehículos \\ \hline	
 	\caption{Requisitos funcionales}
 	\label{tabla:requisitosFuncionales2}
 \end{longtable}
